# synthex

./: LICENSE  README.md  pyproject.toml  synthex-dashboard.jsx
synthex/: README.md  __init__.py  types.py
synthex/adapters/: __init__.py
synthex/examples/: usage.py
synthex/synthex/: cli.py  prompts.py
synthex/synthex/pipeline/: __init__.py
synthex/tests/: test_pipeline.py
