[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthex"
version = "0.1.0"
description = "Dual-stream inference pipeline for model-agnostic AI reasoning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Sharaf Samiur Rahman", email = "" }
]
keywords = ["ai", "llm", "inference", "pipeline", "reasoning", "anthropic", "openai", "dual-stream"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai    = ["openai>=1.0.0"]
ollama    = ["ollama>=0.1.0"]
all       = ["anthropic>=0.25.0", "openai>=1.0.0", "ollama>=0.1.0"]
dev       = ["pytest>=7.0", "pytest-asyncio>=0.21", "anthropic>=0.25.0", "ruff"]

[project.scripts]
synthex = "synthex.cli:main"

[project.urls]
Homepage      = "https://github.com/impulsiveaura/synthex"
Documentation = "https://github.com/impulsiveaura/synthex#readme"
Issues        = "https://github.com/impulsiveaura/synthex/issues"

[tool.hatch.build.targets.wheel]
packages = ["synthex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
